tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all type and fn and value defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.val_decl)),

        // then the expressions to evaluate, in order
        optional($.expression),
      ),

    _atom: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.bigint_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.record_update,
        $.qualified_val_or_fn_name,
        $.dbReference,
        $.paren_expression,
      ),

    // operand/value tier: an atom, a function application, or an infix chain.
    // `apply` is included so applications can be infix operands and values.
    simple_expression: $ =>
      choice(
        $._atom,
        $.apply,
        $.infix_operation,
      ),

    expression: $ =>
      choice(
        // `apply` is reachable via `simple_expression`; not listed separately
        // here (that would make it derivable two ways → grammar conflict).
        $.simple_expression,

        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.lambda_expression,
        $.pipe_expression,
        $.statement,
      ),

    paren_expression: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("expr", $.expression),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    statement: $ =>
      prec.left(
        PREC.STATEMENT,
        seq(field("first", $.expression), field("next", $.expression)),
      ),

    //
    // Booleans
    bool_literal: $ => choice(/true/, /false/),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"\n]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    string_segment: $ => choice($.string_literal, $.string_interpolation),

    //
    // List
    dict_literal: $ => dict_literal_base($, $.dict_content),
    dict_content: $ => dict_content_base($, $.dict_pair),
    dict_pair: $ => dict_pair_base($, $.expression),

    //
    // Tuples
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    tuple_literal_the_rest: $ => tuple_literal_the_rest_base($, $.expression),

    //
    // Record
    record_literal: $ => record_literal_base($, $.record_content),
    record_content: $ => record_content_base($, $.record_pair),
    record_pair: $ => record_pair_base($, $.expression),

    //
    // Record update
    // e.g. { RecordForUpdate { x = 4L; y = 1L } with y = 2L }
    enum_literal: $ => enum_literal_base($, $.enum_fields),
    enum_fields: $ => enum_fields_base($, $.expression),

    //
    // Infix operations
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
      ),

    //
    // If expressions
    field_access: $ =>
      prec(
        PREC.FIELDACCESS,
        seq(
          field(
            "expr",
            choice(
              $.variable_identifier,
              $.record_literal,
              $.paren_expression,
              $.field_access,
            ),
          ),
          field("symbol_dot", alias(".", $.symbol)),
          field("field_name", $.variable_identifier),
        ),
      ),

    //
    // DB reference
    lambda_expression: $ =>
      prec(
        PREC.LAMBDA,
        seq(
          field("keyword_fun", alias("fun", $.keyword)),
          field("pats", $.lambda_pats),
          field("symbol_arrow", alias("->", $.symbol)),
          choice(
            seq($.indent, field("body", $.expression), $.dedent),
            field("body", $.expression),
          ),
        ),
      ),
    lambda_pats: $ => field("pat", repeat1($.let_pattern)),

    lp_tuple: $ => tuple_literal_base($, $.let_pattern, $.let_pattern_the_rest),
    let_pattern: $ => choice($.unit, $.lp_tuple, $.variable_identifier),

    //
    // Let expression
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            seq(
              // args are `_atom`s (not `simple_expression`) so application
              // binds tighter than infix: `f a + b` is `(f a) + b`, and an
              // operator stops arg collection so `f x ++ g y` is `(f x) ++ (g y)`.
              field("args", repeat1($._atom)),
              optional($._function_boundary),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
        ),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    type_reference: $ => choice($.builtin_type, $.qualified_type_name),

    builtin_type: $ =>
      choice(
        /Unit/,
        /Bool/,
        /Int8/,
        /UInt8/,
        /Int16/,
        /UInt16/,
        /Int32/,
        /UInt32/,
        /Int64/,
        /UInt64/,
        /Int128/,
        /UInt128/,
        /Int/,
        /Float/,
        /Char/,
        /String/,
        /DateTime/,
        /Uuid/,
        /Blob/,
        $.list_type_reference,
        $.stream_type_reference,
        $.tuple_type_reference,
        $.dict_type_reference,
        $.fn_type_reference,
        $.variable_type_reference,

        $.db_type_reference,
      ),

    //
    // List<T>
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    qualified_type_name: $ =>
      prec(
        1,
        seq(
          seq(
            repeat(seq($.module_identifier, alias(".", $.symbol))),
            field("type_identifier", $.type_identifier),
          ),
          optional(field("type_args", $.type_args)),
        ),
      ),

    type_args: $ =>
      seq(
        field("symbol_open_angle", alias(token.immediate("<"), $.symbol)),
        field("type_args_items", $.type_args_items),
        field("symbol_close_angle", alias(token.immediate(">"), $.symbol)),
      ),
    type_args_items: $ =>
      seq(
        $.type_reference,
        repeat(
          seq(field("symbol_comma", alias(",", $.symbol)), $.type_reference),
        ),
      ),

    // e.g. `LanguageTools in `PACKAGE.Darklang.LanguageTools.SomeType`
    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `newline` in `val newline = '\n'`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    /** e.g. `x` in `let double (x: Int) = x + x`
     *
     * for let bindings, params, etc. */
    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    // e.g. `Dict { ``Content-Length`` } = "0"`
    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    unit: $ => "()",
  },
});

// ---------------------
// Helper functions
// ---------------------

//
// List
function list_literal_base($, contentRule) {
  return seq(
    field("symbol_open_bracket", alias("[", $.symbol)),
    optional(field("content", contentRule)),
    field("symbol_close_bracket", alias("]", $.symbol)),
  );
}
function list_content_base($, content) {
  return choice(
    seq(
      content,
      repeat(seq(field("list_separator", alias(";", $.symbol)), content)),
      optional(alias(";", $.symbol)),
    ),
    seq(content, repeat(seq($.newline, content)), optional($.newline)),
    seq(
      $.indent,
      seq(content, repeat(seq($.newline, content)), optional($.newline)),
      $.dedent,
    ),
  );
}

//
// Tuple
function tuple_literal_base($, firstOrSecond, rest) {
  return seq(
    field("symbol_left_paren", alias("(", $.symbol)),
    field("first", firstOrSecond),
    field("symbol_comma", alias(",", $.symbol)),
    field("second", firstOrSecond),
    optional(field("rest", rest)),
    field("symbol_right_paren", alias(")", $.symbol)),
  );
}
function tuple_literal_the_rest_base($, rest) {
  return repeat1(
    seq(field("symbol_comma", alias(",", $.symbol)), field("expr", rest)),
  );
}

//
// Dict
function dict_literal_base($, contentRule) {
  return seq(
    field("keyword_dict", alias("Dict", $.keyword)),
    field("symbol_open_brace", alias("{", $.symbol)),
    optional(field("content", contentRule)),
    field("symbol_close_brace", alias("}", $.symbol)),
  );
}
function dict_content_base($, dict_pair) {
  return choice(
    seq(
      dict_pair,
      repeat(seq(field("dict_separator", alias(";", $.symbol)), dict_pair)),
    ),
    seq(dict_pair, repeat(seq($.newline, dict_pair)), optional($.newline)),
  );
}
function dict_pair_base($, value) {
  return seq(
    // CLEANUP this should allow for any string (i.e. `This`), without any backticks. may require alternative syntax.
    field("key", choice($.variable_identifier, $.double_backtick_identifier)),
    field("symbol_equals", alias("=", $.symbol)),
    field("value", value),
  );
}

//
// Enum
function enum_literal_base($, enum_fields) {
  return prec.right(
    seq(
      field("type_name", $.qualified_type_name),
      field("symbol_dot", alias(".", $.symbol)),
      field("case_name", $.enum_case_identifier),
      optional(
        choice(
          seq(
            field("symbol_open_paren", alias(token.immediate("("), $.symbol)),
            field("enum_fields", enum_fields),
            field("symbol_close_paren", alias(")", $.symbol)),
          ),
          field("enum_fields", enum_fields),
          seq($.indent, field("enum_fields", enum_fields), $.dedent),
        ),
      ),
    ),
  );
}
function enum_fields_base($, fields) {
  return prec.right(
    choice(
      fields,
      seq(
        fields,
        repeat(
          prec.right(seq(field("symbol_comma", alias(",", $.symbol)), fields)),
        ),
      ),
    ),
  );
}
//
// Record
function record_literal_base($, record_content) {
  return prec.right(
    choice(
      seq(
        field("type_name", $.qualified_type_name),
        field("symbol_open_brace", alias("{", $.symbol)),
        optional(field("content", record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
      ),
      seq(
        field("type_name", $.qualified_type_name),
        $.indent,
        field("symbol_open_brace", alias("{", $.symbol)),
        optional(field("content", record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
        $.dedent,
      ),
      seq(
        field("type_name", $.qualified_type_name),
        field("symbol_open_brace", alias("{", $.symbol)),
        $.indent,
        optional(field("content", record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
        $.dedent,
      ),
    ),
  );
}
function record_content_base($, record_pair) {
  return choice(
    seq(
      record_pair,
      repeat(seq(field("record_separator", alias(";", $.symbol)), record_pair)),
    ),
    seq(record_pair, repeat(seq($.newline, record_pair)), optional($.newline)),
  );
}
function record_pair_base($, value) {
  return seq(
    field("field", $.variable_identifier),
    field("symbol_equals", alias("=", $.symbol)),
    choice(
      field("value", value),
      seq($.indent, field("value", value), $.dedent),
    ),
  );
}
