tree-sitter-darklang/test/corpus/exhaustive/exprs/fn_calls.txt
==================
basic infix operation parsing
==================

a + b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
infix + is left associative
i.e. `a + b + c` should be parsed as `(a + b) + c`
==================

a + b + c

---

(source_file
  (expression
    (simple_expression
      (infix_operation
          (simple_expression
            (infix_operation
              (simple_expression (variable_identifier))
              (operator)
              (simple_expression (variable_identifier))
            )
          )
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
infix * has higher precedence than infix +
i.e `a + b * c` should be parsed as `a + (b * c)`
==================

a + b * c

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression
          (infix_operation
            (simple_expression (variable_identifier))
            (operator)
            (simple_expression (variable_identifier))
          )
        )
      )
    )
  )
)


==================
infix ^ has higher precedence than infix *
i.e. `a * b ^ c` should be parsed as `a * (b ^ c)`
==================

a * b ^ c

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression
          (infix_operation
            (simple_expression (variable_identifier))
            (operator)
            (simple_expression (variable_identifier))
          )
        )
      )
    )
  )
)



==================
comparison operator >
==================

a > b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
comparison operator <
==================

a < b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
comparison operator >=
==================

a >= b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
comparison operator <=
==================

a <= b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
comparison operator ==
==================

a == b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
comparison operator !=
==================

a != b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
exponent operator ^
==================

a ^ b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)

==================
string concatenation operator ++
==================

a ++ b

---

(source_file
  (expression
    (simple_expression
      (infix_operation
        (simple_expression (variable_identifier))
        (operator)
        (simple_expression (variable_identifier))
      )
    )
  )
)


==================
basic function call
==================

Bool.and true false

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
        (bool_literal)
        (bool_literal)
      )
    )
  )
)


==================
function call with function call as argument
==================

Bool.and (Bool.and true false) false

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
        (paren_expression
          (symbol)
          (expression
            (simple_expression
              (apply
                (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
                (bool_literal)
                (bool_literal)
              )
            )
          )
          (symbol)
        )
        (bool_literal)
      )
    )
  )
)


==================
function call - with a function call as argument followed by an expression
==================

Builtin.printLine (getTitle curiousGeorgeBookId)

0L

---

(source_file
  (expression
    (statement
      (expression
        (simple_expression
          (apply
            (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
            (paren_expression
              (symbol)
              (expression
                (simple_expression
                  (apply
                    (qualified_fn_name (fn_identifier))
                    (variable_identifier)
                  )
                )
              )
              (symbol)
            )
          )
        )
      )
      (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
    )
  )
)


==================
function call - with a record as argument
==================

Builtin.printLine Person { name = "Alice" }

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
        (record_literal
          (qualified_type_name (type_identifier))
          (symbol)
          (record_content
            (record_pair
              (variable_identifier)
              (symbol)
              (expression
                (simple_expression
                  (string_segment
                    (string_literal (symbol) (string_content) (symbol))
                  )
                )
              )
            )
          )
          (symbol)
        )
      )
    )
  )
)




==================
function call - with an enum as argument
==================

Builtin.printLine Stdlib.Option.Option.Some 1L

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
        (enum_literal
          (qualified_type_name (module_identifier) (symbol) (module_identifier) (symbol) (type_identifier))
          (symbol)
          (enum_case_identifier)
          (enum_fields
            (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
          )
        )
      )
    )
  )
)


==================
function call - with a dict as argument
==================

Builtin.printLine Dict {a = 1L}

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (fn_identifier))
        (dict_literal
          (keyword)
          (symbol)
          (dict_content
            (dict_pair
              (variable_identifier)
              (symbol)
              (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
            )
          )
          (symbol)
        )
      )
    )
  )
)

==================
function call - with type arguments
==================

Builtin.jsonParse<Bool> "true"

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name
        (module_identifier) (symbol) (fn_identifier)
        (type_args (symbol) (type_args_items (type_reference (builtin_type))) (symbol))
        )
        (string_segment (string_literal (symbol) (string_content) (symbol)))
      )
    )
  )
)


==================
function call - with a field_access as argument
==================

Darklang.Stdlib.Http.response request.body 200L

---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
        (field_access (variable_identifier) (symbol) (variable_identifier))
        (int64_literal (digits (positive_digits)) (symbol))
      )
    )
  )
)

==================
fn_call - indented args
==================

Stdlib.Tuple3.mapAllThree
  (fun x -> Stdlib.String.toUppercase x)
  (fun x -> x - 2L)
  (fun x -> Stdlib.String.toUppercase x)
  ("one", 2L, "pi")


---

(source_file
  (expression
    (simple_expression
      (apply
        (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
        (indent)
        (expression
          (simple_expression
            (paren_expression
              (symbol)
              (expression
                (lambda_expression
                  (keyword)
                (lambda_pats (let_pattern (variable_identifier)))
                  (symbol)
                  (expression
                    (simple_expression
                      (apply
                        (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
                        (variable_identifier)
                      )
                    )
                  )
                )
              )
              (symbol)
            )
          )
        )
        (expression
          (simple_expression
            (paren_expression
              (symbol)
              (expression
                (lambda_expression
                  (keyword)
                (lambda_pats (let_pattern (variable_identifier)))
                  (symbol)
                  (expression
                    (simple_expression
                      (infix_operation
                        (simple_expression (variable_identifier))
                        (operator)
                      (simple_expression (int64_literal (digits (positive_digits)) (symbol)))
                      )
                    )
                  )
                )
              )
              (symbol)
            )
          )
        )
        (expression
          (simple_expression
            (paren_expression
              (symbol)
              (expression
                (lambda_expression
                  (keyword)
                (lambda_pats (let_pattern (variable_identifier)))
                  (symbol)
                  (expression
                    (simple_expression
                      (apply
                        (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
                        (variable_identifier)
                      )
                    )
                  )
                )
              )
              (symbol)
            )
          )
        )
        (expression
          (simple_expression
            (tuple_literal
              (symbol)
              (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
              (symbol)
            (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
              (tuple_literal_the_rest
                (symbol)
              (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
              )
              (symbol)
            )
          )
        )
        (dedent)
      )
    )
  )
)
